# hff

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
010/: b.hff  hff.bt  l.hff
crates/hff/: Cargo.toml  README.md
crates/hff-async-std/: Cargo.toml  README.md
crates/hff-async-std/src/: lib.rs
crates/hff-async-std/src/read/: api.rs  async_std_reader.rs  chunk.rs  chunk_reader.rs  metadata.rs  mod.rs  reader.rs
crates/hff-core/: Cargo.toml  README.md
crates/hff-core/src/: chunk.rs  chunk_cache.rs  content_info.rs  ecc.rs  endian.rs  error.rs  header.rs  lib.rs  semver.rs  table.rs  version.rs
crates/hff-core/src/hff/: chunk_iter.rs  chunk_view.rs  hff.rs  mod.rs  table_view.rs
crates/hff-core/src/identifier/: mod.rs
crates/hff-core/src/read/: chunk_iter.rs  chunk_view.rs  decompress.rs  depth_first_iter.rs  hff.rs  inspection.rs  mod.rs  table_iter.rs  table_view.rs
crates/hff-core/src/utilities/: hierarchical.rs  ksv.rs  mod.rs  string_vec.rs
crates/hff-core/src/write/: chunk_array.rs  chunk_desc.rs  data_array.rs  data_source.rs  hff_desc.rs  mod.rs  table_array.rs  table_builder.rs  table_desc.rs
crates/hff-dump/: Cargo.toml
crates/hff-dump/src/: main.rs  options.rs
crates/hff-pack/: Cargo.toml  README.md
crates/hff-pack/src/: hierarchy.rs  main.rs  options.rs  structure.rs
crates/hff-std/: Cargo.toml  README.md
crates/hff-std/src/: chunk_desc.rs  data_builder.rs  data_source.rs  lib.rs  reader.rs  table_builder.rs  table_desc.rs  write_seek.rs  writer.rs
crates/hff-std/src/data_source/: file.rs  mod.rs  owned.rs
crates/hff-std/src/read/: api.rs  chunk.rs  metadata.rs  mod.rs  reader.rs  std_reader.rs
crates/hff-std/src/reader/: chunk_view.rs  depth_first_iter.rs  hff.rs  hff_cache.rs  mod.rs  read_seek.rs  table_iter.rs  table_view.rs
crates/hff-std/src/utilities/: ksv.rs  string_vec.rs
crates/hff-std/src/write/: mod.rs
crates/hff-std/src/writer/: chunk_array.rs  chunk_desc.rs  data_array.rs  data_builder.rs  hff_content.rs  hff_desc.rs  mod.rs  table_array.rs  table_builder.rs  table_desc.rs
crates/hff-tokio/: Cargo.toml  LICENSE  README.md
crates/hff-tokio/src/: lib.rs
crates/hff-tokio/src/read/: api.rs  chunk_reader.rs  mod.rs  reader.rs  tokio_reader.rs
crates/hff/cmd/: args.rs  hff.rs
crates/hff/cmd/command/: dump.rs  mod.rs  pack.rs  package.rs  structure.rs  unpack.rs
crates/hff/src/: lib.rs
src/: lib.rs
