[package]
name = "hff"
version = "0.3.6"
edition = "2021"
authors = ["All8Up <all8up@gmail.com>"]
license-file = "LICENSE"
description = "Hierarchical File Format"
repository = "https://github.com/All8Up/hff.git"
readme = "README.md"

[dependencies]
# Core structure of Hff.
hff-core = { path = "./crates/hff-core", version = "0.3.4" }
thiserror = "1.0.51"

# Synchronous version.  Always available.
hff-std = { path = "./crates/hff-std", version = "0.3.7" }

# Support for async-std.
hff-async-std = { path = "./crates/hff-async-std", version = "0.3.3", optional = true }

# Support for tokio.
hff-tokio = { path = "./crates/hff-tokio", version = "0.3.3", optional = true }

[features]
default = []
async-std-rt = ["dep:hff-async-std"]
tokio-rt = ["dep:hff-tokio"]
compression = ["hff-std/compression"]
