[workspace]
resolver = "2"
members = [
    "./crates/hff",
    "./crates/hff-core",
    "./crates/hff-std",
    "./crates/hff-async-std",
    "./crates/hff-tokio",
    "./crates/hff-pack",
]

# Override the source crates when developing.
[patch.crates-io]
hff = { path = "./crates/hff" }
hff-core = { path = "./crates/hff-core" }
hff-std = { path = "./crates/hff-std" }
hff-async-std = { path = "./crates/hff-async-std" }
hff-tokio = { path = "./crates/hff-tokio" }
hff-pack = { path = "./crates/hff-pack" }
