[package]
name = "hff-async-std"
version = "0.1.1"
edition = "2021"
authors = ["All8Up <all8up@gmail.com>"]
license-file = "LICENSE"
description = "Hierarchical File Format: async-std support."
repository = "https://github.com/All8Up/hff.git"
readme = "README.md"

[dependencies]
hff-core = { path = "./../hff-core", version = "0.2.0" }
hff-std = { path = "./../hff-std", version = "0.2.0" }
