[package]
name = "hff-core"
version = "0.4.0"
edition = "2021"
authors = ["All8Up <all8up@gmail.com>"]
license-file = "LICENSE"
description = "Hierarchical File Format: core structure"
repository = "https://github.com/All8Up/hff.git"
readme = "README.md"

[dependencies]
byteorder = "1.5.0"
thiserror = "1.0.51"
uuid  ="1.6.1"

# Support for compressed chunks.
xz2 = { version = "0.1.7", optional = true }

[features]
compression = ["dep:xz2"]
