[package]
name = "hff-std"
version = "0.6.1"
edition = "2021"
authors = ["All8Up <all8up@gmail.com>"]
license-file = "LICENSE"
description = "Hierarchical File Format: synchronous support"
repository = "https://github.com/All8Up/hff.git"
readme = "README.md"

[dependencies]
hff-core = { version = "0.6.1" }

# Support for compressed chunks.
xz2 = { version = "0.1.7", optional = true }

[features]
default = []
compression = ["dep:xz2", "hff-core/compression"]
