[package]
name = "hff-tokio"
version = "0.4.1"
edition = "2021"
authors = ["All8Up <all8up@gmail.com>"]
license-file = "LICENSE"
description = "Hierarchical File Format: tokio support."
repository = "https://github.com/All8Up/hff.git"
readme = "README.md"

[dependencies]
hff-core = { path = "./../hff-core", version = "0.4.0" }
hff-std = { path = "./../hff-std", version = "0.4.0" }
async-trait = { version = "0.1.75" }

# Support for tokio.
# TODO: Minimize the features of tokio for just this crate's needs.
tokio = { version = "1.35.0", features = ["full"] }
