[package]
name = "hff"
version = "0.4.0"
edition = "2021"
authors = ["All8Up <all8up@gmail.com>"]
license-file = "LICENSE"
description = "Hierarchical File Format"
repository = "https://github.com/All8Up/hff.git"
readme = "README.md"

[dependencies]
# Core structure of Hff.
hff-core = { version = "0.4.0" }
thiserror = "1.0.51"

# Synchronous version.  Always available.
hff-std = { version = "0.4.0" }

# Support for async-std.
hff-async-std = { version = "0.4.0", optional = true }

# Support for tokio.
hff-tokio = { version = "0.4.0", optional = true }

[features]
default = []
async-std-rt = ["dep:hff-async-std"]
tokio-rt = ["dep:hff-tokio"]
compression = ["hff-std/compression"]
