[package]
name = "hff"
version = "0.4.0"
edition = "2021"
authors = ["All8Up <all8up@gmail.com>"]
license-file = "LICENSE"
description = "Hierarchical File Format"
repository = "https://github.com/All8Up/hff.git"
readme = "README.md"

[[bin]]
name = "hff"
path = "./cmd/hff.rs"
test = false
bench = false

[dependencies]
# Core structure of Hff.
hff-core = { version = "0.4.0" }
thiserror = "1.0.51"

# Synchronous version.  Always available.
hff-std = { version = "0.4.0" }

# Support for async-std.
hff-async-std = { version = "0.4.0", optional = true }

# Support for tokio.
hff-tokio = { version = "0.4.0", optional = true }

# Support for the tool requirements.
clap = { version = "4.4.13", features = ["derive"] }
clap-verbosity-flag = "2.1.1"
byteorder = "1.5.0"
log = "0.4.20"
env_logger = "0.10.1"
normpath = "1.1.1"

[features]
default = []
async-std-rt = ["dep:hff-async-std"]
tokio-rt = ["dep:hff-tokio"]
compression = ["hff-std/compression"]
